Fix a layout issue that caused the "reset to default" button for the "Color scheme" field to show up in the wrong place.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@1217936 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -703,10 +703,10 @@ select.ws_dropdown optgroup option {
 .ws_color_scheme_display {
     display: inline-block;
     height: 20px;
-    width: 190px;
+    width: 186px;
 
     margin-right: 5px;
-    padding: 2px 2px 2px 3px;
+    padding: 2px 3px;
 
     border: 1px solid #ddd;
     background: white;
